# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
1. Getting started/: CMakeLists.txt
1. Getting started/1.1. Hello window/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
resources/models/planet/: planet.mtl
src/1.getting-started/1.1-hello-window/: 1.1-hello-window.cpp
src/1.getting-started/1.1.1-hello-window/: 1.1.1-hello-window.cpp
src/1.getting-started/1.2.1-hello-triangle/: 1.2.1-hello-triangle.cpp
src/1.getting-started/1.2.2-hello-triangle-indexed/: 1.2.2-hello-triangle-indexed.cpp
src/1.getting-started/1.2.3-hello-triangle-exercise-1/: 1.2.3-hello-triangle-exercise-1.cpp
src/1.getting-started/1.2.4-hello-triangle-exercise-2/: 1.2.4-hello-triangle-exercise-2.cpp
src/1.getting-started/1.2.5-hello-triangle-exercise-3/: 1.2.5-hello-triangle-exercise-3.cpp
src/1.getting-started/1.3.1-shaders-uniform/: 1.3.1-shaders-uniform.cpp
src/1.getting-started/1.3.2-shaders-interpolation/: 1.3.2-shaders-interpolation.cpp
src/1.getting-started/1.3.3-shaders-class/: 1.3.3-shaders-class.cpp
src/1.getting-started/1.3.4-shaders-exercise-1/: shader.vs
src/1.getting-started/1.3.5-shaders-exercise-2/: 1.3.5-shaders-exercise-2.cpp  shader.fs
src/1.getting-started/1.4.1-textures/: 1.4.1-textures.cpp
src/1.getting-started/1.4.2-textures-combined/: 1.4.2-textures-combined.cpp
src/1.getting-started/1.4.3-textures-exercise-1/: 1.4.3-textures-exercise-1.cpp  shader.vs
src/1.getting-started/1.4.4-textures-exercise-2/: 1.4.4-textures-exercise-2.cpp
src/1.getting-started/1.4.5-textures-exercise-3/: 1.4.5-textures-exercise-3.cpp  shader.fs
src/1.getting-started/1.4.6-textures-exercise-4/: 1.4.6-textures-exercise-4.cpp  shader.fs
src/1.getting-started/1.5.1-transformations/: 1.5.1-transformations.cpp
src/1.getting-started/1.5.2-transformations-exercise-1/: 1.5.2-transformations-exercise-1.cpp
src/1.getting-started/1.5.3-transformations-exercise-2/: 1.5.3-transformations-exercise-2.cpp
src/1.getting-started/1.6.1-coordinate-systems/: 1.6.1-coordinate-systems.cpp
src/1.getting-started/1.6.2-coordinate-systems-depth/: 1.6.2-coordinate-systems-depth.cpp
src/1.getting-started/1.6.3-coordinate-systems-multiple/: 1.6.3-coordinate-systems-multiple.cpp
src/1.getting-started/1.6.4-coordinate-systems-exercise-1/: 1.6.4-coordinate-systems-exercise-1.cpp
src/1.getting-started/1.6.5-coordinate-systems-exercise-2/: 1.6.5-coordinate-systems-exercise-2.cpp
src/1.getting-started/1.6.6-coordinate-systems-exercise-3/: 1.6.6-coordinate-systems-exercise-3.cpp
src/1.getting-started/1.7.1-camera-circle/: 1.7.1-camera-circle.cpp  shader.fs
src/1.getting-started/1.7.2-camera-keyboard-dt/: 1.7.2-camera-keyboard-dt.cpp
src/1.getting-started/1.7.3-camera-class/: 1.7.3-camera-class.cpp
src/1.getting-started/1.7.4-camera-exercise-1/: 1.7.4-camera-exercise-1.cpp
src/1.getting-started/2.1-hello-triangle/: 2.1-hello-triangle.cpp
src/1.getting-started/2.3-hello-triangle-exercise-1/: 2.3-hello-triangle-exercise-1.cpp
src/1.getting-started/3.2-shaders-interpolation/: 3.2-shaders-interpolation.cpp
src/1.getting-started/3.3-shaders-class/: shader.vs
src/1.getting-started/3.4-shaders-exercise-1/: 3.4-shaders-exercise-1.cpp
src/1.getting-started/3.5-shaders-exercise-2/: shader.vs
src/1.getting-started/3.6-shaders-exercise-3/: shader.fs  shader.vs
src/1.getting-started/4.1-textures/: shader.fs
src/1.getting-started/4.3-textures-exercise-1/: 4.3-textures-exercise-1.cpp  shader.fs
src/1.getting-started/4.5-textures-exercise-3/: 4.5-textures-exercise-3.cpp
src/1.getting-started/4.6-textures-exercise-4/: 4.6-textures-exercise-4.cpp
src/1.getting-started/5.1-transformations/: 5.1-transformations.cpp
src/1.getting-started/5.2-transformations-exercise-1/: 5.2-transformations-exercise-1.cpp  shader.fs
src/1.getting-started/5.3-transformations-exercise-2/: 5.3-transformations-exercise-2.cpp  shader.vs
src/1.getting-started/6.1-coordinate-systems/: 6.1-coordinate-systems.cpp  shader.vs
src/1.getting-started/6.2-coordinate-systems-depth/: shader.vs
src/1.getting-started/6.6-coordinate-systems-exercise-3/: 6.6-coordinate-systems-exercise-3.cpp
src/1.getting-started/7.1-camera-circle/: 7.1-camera-circle.cpp
src/1.getting-started/7.2-camera-keyboard-dt/: 7.2-camera-keyboard-dt.cpp
src/1.getting-started/7.3-camera-class/: 7.3-camera-class.cpp
src/2.lighting/1.colors/: 1.colors.cpp  color.fs  light-cube.fs
src/2.lighting/2.1.1-colors/: 2.1.1-colors.cpp  color.vs
src/2.lighting/2.1.basic-lighting-diffuse/: 2.1.basic-lighting-diffuse.cpp
src/2.lighting/2.2.1-basic-lighting-diffuse/: 2.2.1-basic-lighting-diffuse.cpp  basic-lighting.fs
src/2.lighting/2.2.2-basic-lighting-specular/: 2.2.2-basic-lighting-specular.cpp
src/2.lighting/2.2.3-basic-lighting-exercise-1/: 2.2.3-basic-lighting-exercise-1.cpp  basic-lighting.fs  basic-lighting.vs
src/2.lighting/2.2.4-basic-lighting-exercise-2/: 2.2.4-basic-lighting-exercise-2.cpp  basic-lighting.fs  basic-lighting.vs
src/2.lighting/2.2.5-basic-lighting-exercise-3/: 2.2.5-basic-lighting-exercise-3.cpp  basic-lighting.fs  basic-lighting.vs  light-cube.fs
src/2.lighting/2.3.1-materials/: 2.3.1-materials.cpp  basic-lighting.fs
src/2.lighting/2.3.2-materials-exercise-1/: 2.3.2-materials-exercise-1.cpp
src/2.lighting/2.3.3-materials-exercise-2/: 2.3.3-materials-exercise-2.cpp
src/2.lighting/2.4.1-lighting-maps-diffuse-map/: 2.4.1-lighting-maps-diffuse-map.cpp  basic-lighting.vs  lighting-maps.fs
src/common/: camera.h  filesystem.h  flycamera.h  model.h  resources.h  shader.h  texture.h
src/shared/: basicmeshes.h  bitmask.h  buffer.h  cubemap.h  filesystem.h  flycamera.h  framebuffer.h  gpuconstants.h  gpuobject.h  mesh.h  model.h  pointlight.h  renderbuffer.h  shader.h  texture.h  texture2d.h  textures.h  uniformbuffer.h  vertex.h  vertexarray.h  vertexbuffer.h
(+112 files in other folders)
